logs; correct error reporting in http